# make_opcua

./: client-minimal.py  client01.py  server-minimal.py  server2_opcv_01.py  server3_lidar_01.py
makeathon/: CMakeLists.txt  CMakeLists.txt~  package.xml
makeathon/src/: distance_server.py~  distancia.py  distancia.py~  distancia2.cpp  distancia2.cpp~  programa_anterior.txt  server3_lidar_02.py
